@@ -16,10 +16,11 @@ import com.templeregistry.entity.geo.Taluk;
 import com.templeregistry.entity.temple.Temple;
 import com.templeregistry.entity.temple.TempleGrade;
 import com.templeregistry.entity.temple.ReligiousTradition;
+import com.templeregistry.entity.workflow.WorkflowEntityType;
 import com.templeregistry.repository.audit.GovernanceActionRepository;
-import com.templeregistry.repository.declaration.AssetDeclarationVersionRepository;
 import com.templeregistry.repository.declaration.DeclarationClarificationRepository;
 import com.templeregistry.repository.declaration.DeclarationRepository;
+import com.templeregistry.repository.versioning.EntityVersionRepository;
 import com.templeregistry.repository.geo.CityRepository;
 import com.templeregistry.repository.geo.DistrictRepository;
 import com.templeregistry.repository.geo.HobliRepository;
@@ -37,12 +38,13 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.test.context.ActiveProfiles;
 
 import java.lang.reflect.Field;
 import java.time.LocalDate;
-import java.util.Collections;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -76,7 +78,7 @@ class DeclarationClarificationIT extends MySQLContainerBase {
     private DeclarationRepository declarationRepository;
 
     @Autowired
-    private AssetDeclarationVersionRepository versionRepository;
+    private EntityVersionRepository versionRepository;
 
     @Autowired
     private DeclarationClarificationRepository clarificationRepository;
@@ -111,11 +113,7 @@ class DeclarationClarificationIT extends MySQLContainerBase {
         clarificationRepository.deleteAll();
         declarationRepository.deleteAll();
         templeRepository.deleteAll();
-        hobliRepository.deleteAll();
-        talukRepository.deleteAll();
-        districtRepository.deleteAll();
-        cityRepository.deleteAll();
-        stateRepository.deleteAll();
+        hardDeleteGeoHierarchy();
 
         // Set up bootstrap security context for JPA auditing
         ScopeHelper.Claims bootstrapClaims = new ScopeHelper.Claims(1L, "TEMPLE_AUTHORITY", null, null, "ta_user", "EDIT");
@@ -145,7 +143,7 @@ class DeclarationClarificationIT extends MySQLContainerBase {
         Long declarationId = created.getId();
 
         // Step 2: Submit (TA)
-        declarationService.submit(declarationId);
+        governanceWorkflowService.submitDeclaration(declarationId);
 
         AssetDeclaration afterSubmit = declarationRepository.findById(declarationId).orElseThrow();
         assertThat(afterSubmit.getStatus()).isEqualTo(DeclarationStatus.SUBMITTED);
@@ -170,7 +168,9 @@ class DeclarationClarificationIT extends MySQLContainerBase {
         assertThat(afterRespond.getStatus()).isEqualTo(DeclarationStatus.CLARIFICATION_RESPONDED);
 
         // Assert snapshot created at respondToClarification
-        int versionsAfterRespond = versionRepository.findByDeclarationIdOrderByVersionNumberDesc(declarationId).size();
+        int versionsAfterRespond = versionRepository
+                .findAllByEntityTypeAndEntityIdOrderByVersionNumberDesc(WorkflowEntityType.DECLARATION.name(), declarationId)
+                .size();
         assertThat(versionsAfterRespond).isGreaterThanOrEqualTo(2); // submit + respond
 
         // Assert two clarification records exist: one DC_TO_TEMPLE, one TEMPLE_TO_DC
@@ -195,7 +195,9 @@ class DeclarationClarificationIT extends MySQLContainerBase {
         assertThat(afterApprove.getStatus()).isEqualTo(DeclarationStatus.APPROVED);
 
         // Assert snapshot created at approve
-        int versionsAfterApprove = versionRepository.findByDeclarationIdOrderByVersionNumberDesc(declarationId).size();
+        int versionsAfterApprove = versionRepository
+                .findAllByEntityTypeAndEntityIdOrderByVersionNumberDesc(WorkflowEntityType.DECLARATION.name(), declarationId)
+                .size();
         assertThat(versionsAfterApprove).isGreaterThan(versionsAfterRespond);
     }
 
@@ -258,7 +260,7 @@ class DeclarationClarificationIT extends MySQLContainerBase {
 
     private void setSecurityContext(ScopeHelper.Claims claims) {
         SecurityContextHolder.getContext().setAuthentication(
-                new UsernamePasswordAuthenticationToken(claims, null, Collections.emptyList()));
+                new UsernamePasswordAuthenticationToken(claims, null, List.of(new SimpleGrantedAuthority("ROLE_" + claims.role()))));
     }
 
     /**
