@@ -14,9 +14,12 @@ import com.templeregistry.entity.geo.Taluk;
 import com.templeregistry.entity.temple.Temple;
 import com.templeregistry.entity.temple.TempleGrade;
 import com.templeregistry.entity.temple.ReligiousTradition;
+import com.templeregistry.entity.versioning.EntityVersion;
+import com.templeregistry.entity.versioning.EntityVersionStatus;
+import com.templeregistry.entity.workflow.WorkflowEntityType;
 import com.templeregistry.repository.audit.GovernanceActionRepository;
-import com.templeregistry.repository.declaration.AssetDeclarationVersionRepository;
 import com.templeregistry.repository.declaration.DeclarationRepository;
+import com.templeregistry.repository.versioning.EntityVersionRepository;
 import com.templeregistry.repository.geo.CityRepository;
 import com.templeregistry.repository.geo.DistrictRepository;
 import com.templeregistry.repository.geo.HobliRepository;
@@ -34,11 +37,11 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.test.context.ActiveProfiles;
 
 import java.time.LocalDate;
-import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -71,7 +74,7 @@ class DeclarationSiteVisitIT extends MySQLContainerBase {
     private DeclarationRepository declarationRepository;
 
     @Autowired
-    private AssetDeclarationVersionRepository versionRepository;
+    private EntityVersionRepository versionRepository;
 
     @Autowired
     private GovernanceActionRepository governanceActionRepository;
@@ -102,11 +105,7 @@ class DeclarationSiteVisitIT extends MySQLContainerBase {
         versionRepository.deleteAll();
         declarationRepository.deleteAll();
         templeRepository.deleteAll();
-        hobliRepository.deleteAll();
-        talukRepository.deleteAll();
-        districtRepository.deleteAll();
-        cityRepository.deleteAll();
-        stateRepository.deleteAll();
+        hardDeleteGeoHierarchy();
 
         // Set up bootstrap security context for JPA auditing
         ScopeHelper.Claims bootstrapClaims = new ScopeHelper.Claims(1L, "TEMPLE_AUTHORITY", null, null, "ta_user", "EDIT");
@@ -139,42 +138,64 @@ class DeclarationSiteVisitIT extends MySQLContainerBase {
         assertThat(afterCreate.getStatus()).isEqualTo(DeclarationStatus.DRAFT);
 
         // Step 2: Submit (TA)
-        declarationService.submit(declarationId);
+        governanceWorkflowService.submitDeclaration(declarationId);
 
         AssetDeclaration afterSubmit = declarationRepository.findById(declarationId).orElseThrow();
         assertThat(afterSubmit.getStatus()).isEqualTo(DeclarationStatus.SUBMITTED);
 
-        // Step 3: Schedule site visit (DC)
+        // Step 3: Mark under review (DC) — required before SCHEDULE_SITE_VISIT per TransitionRuleRegistry
         setSecurityContext(dcClaims);
+        governanceWorkflowService.markUnderReview(declarationId, dcClaims);
+
+        AssetDeclaration afterUnderReview = declarationRepository.findById(declarationId).orElseThrow();
+        assertThat(afterUnderReview.getStatus()).isEqualTo(DeclarationStatus.UNDER_REVIEW);
+
+        // Step 4: Schedule site visit (DC)
         SiteVisitRequest siteVisitRequest = new SiteVisitRequest("Scheduled for inspection");
         governanceWorkflowService.scheduleSiteVisit(declarationId, siteVisitRequest, dcClaims);
 
         AssetDeclaration afterSchedule = declarationRepository.findById(declarationId).orElseThrow();
         assertThat(afterSchedule.getStatus()).isEqualTo(DeclarationStatus.SITE_VISIT_SCHEDULED);
+        // Regression: physical_verification_status must persist and round-trip the full 34-char
+        // enum name without truncation (V114 widened the column from VARCHAR(30) to VARCHAR(50)).
+        assertThat(afterSchedule.getPhysicalVerificationStatus())
+                .isEqualTo(com.templeregistry.entity.governance.PhysicalVerificationStatus.ORDERED_FOR_PHYSICAL_VERIFICATION);
 
-        // Step 4: Complete site visit (DC)
+        // Step 5: Complete site visit (DC)
         governanceWorkflowService.completeSiteVisit(declarationId, dcClaims);
 
         AssetDeclaration afterComplete = declarationRepository.findById(declarationId).orElseThrow();
         assertThat(afterComplete.getStatus()).isEqualTo(DeclarationStatus.SITE_VISIT_COMPLETED);
 
-        // Step 5: Verify declaration (DC)
+        // Step 6: Verify declaration (DC)
         governanceWorkflowService.verifyDeclaration(declarationId, dcClaims);
 
         AssetDeclaration afterVerify = declarationRepository.findById(declarationId).orElseThrow();
         assertThat(afterVerify.getStatus()).isEqualTo(DeclarationStatus.VERIFIED);
 
-        // Step 6: Approve (DC)
+        // Step 7: Approve (DC)
         WorkflowApproveRequest approveRequest = new WorkflowApproveRequest();
         governanceWorkflowService.approveDeclaration(declarationId, approveRequest, dcClaims);
 
         AssetDeclaration afterApprove = declarationRepository.findById(declarationId).orElseThrow();
         assertThat(afterApprove.getStatus()).isEqualTo(DeclarationStatus.APPROVED);
 
-        // Assert snapshot count = 5
-        // (submit + scheduleSiteVisit + completeSiteVisit + verify + approve)
-        List<?> versions = versionRepository.findByDeclarationIdOrderByVersionNumberDesc(declarationId);
-        assertThat(versions).hasSize(5);
+        // Assert snapshot count = 6:
+        // v1 is the bootstrap DRAFT_OVERLAY row WorkflowEngineImpl.initiate() writes when the
+        // WorkflowInstance is first created (at declaration creation) — EntityVersion rows are
+        // immutable and append-only (never updated/replaced; version_number/snapshot_json are
+        // updatable=false), so this row is never consumed by later snapshots, only superseded by
+        // higher version numbers. v2-v6 are the five explicit VersionService.snapshot() calls
+        // this flow triggers: submit, scheduleSiteVisit, completeSiteVisit, verify, approve.
+        List<EntityVersion> versions = versionRepository
+                .findAllByEntityTypeAndEntityIdOrderByVersionNumberDesc(WorkflowEntityType.DECLARATION.name(), declarationId);
+        assertThat(versions).hasSize(6);
+        assertThat(versions).extracting(EntityVersion::getVersionNumber)
+                .containsExactly(6, 5, 4, 3, 2, 1); // DESC order
+
+        EntityVersion bootstrap = versions.get(versions.size() - 1);
+        assertThat(bootstrap.getVersionNumber()).isEqualTo(1);
+        assertThat(bootstrap.getStatus()).isEqualTo(EntityVersionStatus.DRAFT_OVERLAY);
     }
 
     // â”€â”€â”€ Helpers â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
@@ -236,6 +257,6 @@ class DeclarationSiteVisitIT extends MySQLContainerBase {
 
     private void setSecurityContext(ScopeHelper.Claims claims) {
         SecurityContextHolder.getContext().setAuthentication(
-                new UsernamePasswordAuthenticationToken(claims, null, Collections.emptyList()));
+                new UsernamePasswordAuthenticationToken(claims, null, List.of(new SimpleGrantedAuthority("ROLE_" + claims.role()))));
     }
 }
